update event in swagger works
